# LaserLineExtractionFrontend

./: .gitignore  1.txt  CLineLaserExtract.pro  CLineLaserExtract.sln  CLineLaserExtract.vcxproj  CLineLaserExtract.vcxproj.filters  CMakeLists.txt  CMakeLists.txt.bak  CMakeUserPresets.json  Makefile  Makefile.Debug  Makefile.Release  NavLogger.h  Pinyin.qrc  README.md  cnlhelper.cpp  cnlhelper.h  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.h  settingwindow.cpp  settingwindow.h  settingwindow.ui  taskdailog.cpp  taskdailog.h  taskdailog.ui  ui_mainwindow.h  ui_settingwindow.h  ui_taskdailog.h  util.cpp  util.h
settings/: BaseSetting.json  test.json  潍柴小.json
